crates/panache-parser/tests/snapshots/yaml__yaml_suite_HM87__01.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: HM87/01
input: "[?x]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
